--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <header class="hero-section">
         <h1 class="hero-text" id="animated-hero-text">Liviaaa Official Marketplace</h1>
-        <p class="hero-subtext" id="counting-text">Animasi Txt Masuk Counting Txt</p> 
+        <p class="hero-subtext" id="counting-text">Welcome 💗🫶🏻 Selamat Berbelanja</p> 
         <div class="hero-buttons">
             <a href="https://www.youtube.com/@TiaraaAndiniii" target="_blank" class="hero-button youtube-button">
                 <i class="fab fa-youtube"></i> YouTube
             </a>
-            <a href="https://wa.me/6281234567890?text=Halo%20Admin%20Livia,%20saya%20ingin%20bertanya%20mengenai%20produk." target="_blank" class="hero-button whatsapp-button">
+            <a href="https://wa.me/13658700681‬?text=Halo%20Admin%20Livia,%20saya%20ingin%20bertanya%20mengenai%20produk." target="_blank" class="hero-button whatsapp-button">
                 <i class="fab fa-whatsapp"></i> WhatsApp
             </a>
             <button class="hero-button call-center-button" id="open-call-center-modal">
@@ -47,8 +47,8 @@
                 
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/00FFFF/000000?text=P1" alt="Produk 1 Placeholder"></div>
-                    <h2 class="product-title">Nama Produk 1</h2>
-                    <p class="product-description">Dapatkan produk ini sekarang juga dengan penawaran terbatas!</p>
+                    <h2 class="product-title">SCRIPT NO ENC 100%</h2>
+                    <p class="product-description">Betul ya! Script Ini No Enc Tapi Beberapa Fiturnya Apikey nya Expired </p>
                     <button class="buy-now-button" data-product="Produk 1">Beli Sekarang <span class="arrow-icon">→</span></button>
                 </div>
                 <div class="product-card">
