--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             <div class="product-grid">
                 
                 <div class="product-card">
-                    <div class="product-image"><img src="https://via.placeholder.com/100/00FFFF/000000?text=P1" alt="Produk 1 Placeholder"></div>
+                    <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1" alt="Produk 1 Placeholder"></div>
                     <h2 class="product-title">SCRIPT NO ENC 100%</h2>
                     <p class="product-description">Betul ya! Script Ini No Enc Tapi Beberapa Fiturnya Apikey nya Expired </p>
                     <button class="buy-now-button" data-product="Produk 1">Beli Sekarang <span class="arrow-icon">→</span></button>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="https://via.placeholder.com/100/00BFFF/000000?text=P2" alt="Produk 2 Placeholder"></div>
+                    <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1text=P2" alt="Produk 2 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 2</h2>
                     <p class="product-description">Deskripsi singkat produk kedua yang menarik perhatian pelanggan.</p>
                     <button class="buy-now-button" data-product="Produk 2">Beli Sekarang <span class="arrow-icon">→</span></button>
                 </div>
                 <div class="product-card">
-                    <div class="product-image"><img src="https://via.placeholder.com/100/007BFF/000000?text=P3" alt="Produk 3 Placeholder"></div>
+                    <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1text=P3" alt="Produk 3 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 3</h2>
                     <p class="product-description">Produk unggulan dengan kualitas terbaik dan harga bersaing.</p>
                     <button class="buy-now-button" data-product="Produk 3">Beli Sekarang <span class="arrow-icon">→</span></button>
