--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="product-grid">
                 
                 <div class="product-card">
-                    <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1" alt="Produk 1 Placeholder"></div>
+                    <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1" alt="Produk 1"></div>
                     <h2 class="product-title">SCRIPT NO ENC 100%</h2>
                     <p class="product-description">Betul ya! Script Ini No Enc Tapi Beberapa Fiturnya Apikey nya Expired </p>
                     <button class="buy-now-button" data-product="Produk 1">Beli Sekarang <span class="arrow-icon">→</span></button>
