--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <header class="hero-section">
         <h1 class="hero-text" id="animated-hero-text">Liviaaa Official Marketplace</h1>
         <p class="hero-subtext" id="counting-text">Welcome 💗🫶🏻 Selamat Berbelanja</p> 
-        <div class="hero-buttons">
-            <a href="https://www.youtube.com/@TiaraaAndiniii" target="_blank" class="hero-button youtube-button">
+        <nav class="hero-buttons">
+            <a href="https://www.youtube.com/@LiviaaaChantikaaID" target="_blank" class="hero-button youtube-button">
                 <i class="fab fa-youtube"></i> YouTube
             </a>
-            <a href="https://wa.me/13658700681‬?text=Halo%20Admin%20Livia,%20saya%20ingin%20bertanya%20mengenai%20produk." target="_blank" class="hero-button whatsapp-button">
+            <a href="https://wa.me/6281234567890?text=Halo%20Admin%20Livia,%20saya%20ingin%20bertanya%20mengenai%20produk." target="_blank" class="hero-button whatsapp-button">
                 <i class="fab fa-whatsapp"></i> WhatsApp
             </a>
             <button class="hero-button call-center-button" id="open-call-center-modal">
                 <i class="fas fa-headset"></i> Call Center
             </button>
-        </div>
+        </nav>
     </header>
 
     <main class="content-wrapper">
@@ -35,7 +35,7 @@
             <div class="about-content">
                 <p class="justify-text">Liviaaa Chantika ID adalah platform resmi yang didesain untuk memberikan pengalaman berbelanja online yang premium dan terpercaya. Kami menjunjung tinggi kualitas layanan dan keamanan transaksi. Melalui integrasi teknologi terbaru, kami memastikan setiap produk dan informasi yang Anda terima selalu akurat dan eksklusif.</p>
                 <p class="justify-text">Komitmen kami adalah menjadi marketplace yang terdepan dalam inovasi dan kepuasan pelanggan. Kami terus berinovasi untuk menghadirkan fitur-fitur terbaik demi kenyamanan Anda dalam bertransaksi.</p>
-                <a href="https://www.youtube.com/@TiaraaAndiniii" target="_blank" class="btn-secondary read-more-button">Pelajari Lebih Lanjut →</a>
+                <a href="https://www.youtube.com/@TiaraaAndiniii" target="_blank" class="read-more-button">Pelajari Lebih Lanjut <i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
 
@@ -49,61 +49,61 @@
                     <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1" alt="Produk 1"></div>
                     <h2 class="product-title">SCRIPT NO ENC 100%</h2>
                     <p class="product-description">Betul ya! Script Ini No Enc Tapi Beberapa Fiturnya Apikey nya Expired </p>
-                    <button class="buy-now-button" data-product="Produk 1">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 1">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1text=P2" alt="Produk 2 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 2</h2>
                     <p class="product-description">Deskripsi singkat produk kedua yang menarik perhatian pelanggan.</p>
-                    <button class="buy-now-button" data-product="Produk 2">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 2">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://img1.pixhost.to/images/10463/665244261_nuxi.jpgtext=P1text=P3" alt="Produk 3 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 3</h2>
                     <p class="product-description">Produk unggulan dengan kualitas terbaik dan harga bersaing.</p>
-                    <button class="buy-now-button" data-product="Produk 3">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 3">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/0000FF/FFFFFF?text=P4" alt="Produk 4 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 4</h2>
                     <p class="product-description">Penawaran eksklusif hanya untuk Anda, jangan sampai ketinggalan!</p>
-                    <button class="buy-now-button" data-product="Produk 4">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 4">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/33CCCC/000000?text=P5" alt="Produk 5 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 5</h2>
                     <p class="product-description">Solusi inovatif untuk kebutuhan sehari-hari Anda.</p>
-                    <button class="buy-now-button" data-product="Produk 5">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 5">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/66FFFF/000000?text=P6" alt="Produk 6 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 6</h2>
                     <p class="product-description">Limited edition! Segera miliki sebelum kehabisan.</p>
-                    <button class="buy-now-button" data-product="Produk 6">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 6">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/0033CC/FFFFFF?text=P7" alt="Produk 7 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 7</h2>
                     <p class="product-description">Desain modern dan elegan, cocok untuk gaya Anda.</p>
-                    <button class="buy-now-button" data-product="Produk 7">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 7">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/3399FF/000000?text=P8" alt="Produk 8 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 8</h2>
                     <p class="product-description">Harga terjangkau, kualitas bintang lima.</p>
-                    <button class="buy-now-button" data-product="Produk 8">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 8">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/66B2FF/000000?text=P9" alt="Produk 9 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 9</h2>
                     <p class="product-description">Item wajib punya untuk koleksi Anda.</p>
-                    <button class="buy-now-button" data-product="Produk 9">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 9">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="product-card">
                     <div class="product-image"><img src="https://via.placeholder.com/100/99CCFF/000000?text=P10" alt="Produk 10 Placeholder"></div>
                     <h2 class="product-title">Nama Produk 10</h2>
                     <p class="product-description">Jangan ragu, beli sekarang dan rasakan perbedaannya!</p>
-                    <button class="buy-now-button" data-product="Produk 10">Beli Sekarang <span class="arrow-icon">→</span></button>
+                    <button class="buy-now-button" data-product="Produk 10">Beli Sekarang <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div> 
         </section>
