--- a/index.html
+++ b/index.html
@@ -215,23 +215,9 @@
                 <p class="modal-question">Status: **Lakukan Pembayaran**</p>
                 <div class="qris-container">
                     <img src="https://files.catbox.moe/zyglg0.jpg" alt="QRIS Code" class="qris-image">
-                    <p class="qris-info">Liviaaa Chantikaa<br>NMID: ID102030405060708<br>001</p>
-                    <p class="qris-option">Liviaaa Payment QRIS OPSI</p>
-                </div>
-                <div class="modal-form-group">
-                    <label for="e-wallet-select" class="form-label">Scan QRIS menggunakan aplikasi apa?</label>
-                    <select id="e-wallet-select" class="form-input">
-                        <option value="">Pilih Aplikasi E-wallet / M-banking</option>
-                        <option value="dana">DANA</option>
-                        <option value="ovo">OVO</option>
-                        <option value="gopay">GoPay</option>
-                        <option value="linkaja">LinkAja</option>
-                        <option value="mandiri">Livin' by Mandiri</option>
-                        <option value="bca">BCA Mobile</option>
-                    </select>
                 </div>
                 <div class="modal-buttons">
-                    <button id="btn-next-to-upload" class="btn-primary btn-large" disabled>Lanjut Upload Bukti →</button>
+                    <button id="btn-next-to-upload" class="btn-primary btn-large">Lanjut Upload Bukti →</button>
                     <button id="btn-cancel-transaction" class="btn-secondary btn-large">Batalkan Transaksi</button>
                 </div>
             </div>
