--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <hr class="section-divider">
 
         <section class="section-container video-section">
-            <h3 class="section-title">Tonton Ulasan Produk Kami</h3>
+            <h3 class="section-title">Update Video Script Terbaru Kami</h3>
             <div class="video-container">
                 <iframe 
                     class="youtube-video"
-                    src="https://www.youtube.com/embed/0" 
+                    src="https://youtu.be/F-zgkRj_kYY?si=BwSyNTHHhhahShsP" 
                     title="YouTube video player 1"
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -142,7 +142,7 @@
                 </iframe>
                 <iframe 
                     class="youtube-video"
-                    src="https://www.youtube.com/embed/1" 
+                    src="https://youtu.be/CY03UwoYn0E?si=4qUrCilqhSLVx0Dz" 
                     title="YouTube video player 2"
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
