--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="video-container">
                 <iframe 
                     class="youtube-video"
-                    src="https://youtu.be/F-zgkRj_kYY?si=JsTVT1QPwXKYTASK" 
-                    title="NEW SC BOT 🐝| 💗LIVIAA ID | 2025 UPDATE🔥ALL RUN NO ERROR!! | APIKEY BUY ONLY! ‼️"
+                    src="https://www.youtube.com/embed/0" 
+                    title="YouTube video player 1"
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
