--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="video-container">
                 <iframe 
                     class="youtube-video"
-                    src="https://files.catbox.moe/zyglg0.jpg" 
+                    src="https://img1.pixhost.to/images/10466/665270648_andre.jpg" 
                     title="YouTube video player 1"
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
