--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <h3 class="section-title">Apa Kata Mereka?</h3>
             <div class="testimonials-carousel">
                 <div class="testimonial-card">
-                    <img src="https://via.placeholder.com/150/007bff/ffffff?text=User+1" alt="Testimoni User 1" class="testimonial-img">
+                    <img src="https://img1.pixhost.to/images/10466/665277043_andre.jpg" alt="Testimoni User 1" class="testimonial-img">
                     <p class="testimonial-text">"Produknya luar biasa! Saya sangat puas dengan kualitasnya. Pengiriman cepat dan packing rapi."</p>
                     <p class="testimonial-author">- User 1, Pelanggan Setia</p>
                 </div>
