--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
                     <p class="testimonial-author">- User 1, Pelanggan Setia</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="https://via.placeholder.com/150/00bfff/ffffff?text=User+2" alt="Testimoni User 2" class="testimonial-img">
+                    <img src="https://img1.pixhost.to/images/10466/665277482_andre.jpg" alt="Testimoni User 2" class="testimonial-img">
                     <p class="testimonial-text">"Sangat direkomendasikan! Pelayanan customer service juga sangat responsif. Pasti beli lagi!"</p>
                     <p class="testimonial-author">- User 2, Pembeli Puas</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="https://via.placeholder.com/150/00ffff/ffffff?text=User+3" alt="Testimoni User 3" class="testimonial-img">
+                    <img src="https://files.catbox.moe/0qod3x.jpg" alt="Testimoni User 3" class="testimonial-img">
                     <p class="testimonial-text">"Awalnya ragu, tapi ternyata produknya melebihi ekspektasi. Kualitas premium dengan harga terjangkau."</p>
                     <p class="testimonial-author">- User 3, Pengguna Baru</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="https://via.placeholder.com/150/007bff/ffffff?text=User+4" alt="Testimoni User 4" class="testimonial-img">
+                    <img src="https://files.catbox.moe/sgksf0.jpg" alt="Testimoni User 4" class="testimonial-img">
                     <p class="testimonial-text">"Saya suka sekali! Desainnya modern dan fungsinya sempurna. Tidak menyesal beli di sini."</p>
                     <p class="testimonial-author">- User 4, Kolektor</p>
                 </div>
