--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <p class="testimonial-author">- User 2, Pembeli Puas</p>
                 </div>
                 <div class="testimonial-card">
-                    <img src="https://files.catbox.moe/0qod3x.jpg" alt="Testimoni User 3" class="testimonial-img">
+                    <img src="https://tmpfiles.org/dl/11927438/undefined.jpg" alt="Testimoni User 3" class="testimonial-img">
                     <p class="testimonial-text">"Awalnya ragu, tapi ternyata produknya melebihi ekspektasi. Kualitas premium dengan harga terjangkau."</p>
                     <p class="testimonial-author">- User 3, Pengguna Baru</p>
                 </div>
