--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
                 <div class="testimonial-card">
                     <img src="https://img1.pixhost.to/images/10466/665277043_andre.jpg" alt="Testimoni User 1" class="testimonial-img">
                     <p class="testimonial-text">"Produknya luar biasa! Saya sangat puas dengan kualitasnya. Pengiriman cepat dan packing rapi."</p>
-                    <p class="testimonial-author">- User 1, Pelanggan Setia</p>
+                    <p class="testimonial-author">- Andini, Pelanggan Setia</p>
                 </div>
                 <div class="testimonial-card">
                     <img src="https://img1.pixhost.to/images/10466/665277482_andre.jpg" alt="Testimoni User 2" class="testimonial-img">
                     <p class="testimonial-text">"Sangat direkomendasikan! Pelayanan customer service juga sangat responsif. Pasti beli lagi!"</p>
-                    <p class="testimonial-author">- User 2, Pembeli Puas</p>
+                    <p class="testimonial-author">- Lisa Kartina, Pembeli Puas</p>
                 </div>
                 <div class="testimonial-card">
                     <img src="https://tmpfiles.org/dl/11927438/undefined.jpg" alt="Testimoni User 3" class="testimonial-img">
                     <p class="testimonial-text">"Awalnya ragu, tapi ternyata produknya melebihi ekspektasi. Kualitas premium dengan harga terjangkau."</p>
-                    <p class="testimonial-author">- User 3, Pengguna Baru</p>
+                    <p class="testimonial-author">- Amelia Anastasya, Pengguna Baru</p>
                 </div>
                 <div class="testimonial-card">
                     <img src="https://files.catbox.moe/sgksf0.jpg" alt="Testimoni User 4" class="testimonial-img">
                     <p class="testimonial-text">"Saya suka sekali! Desainnya modern dan fungsinya sempurna. Tidak menyesal beli di sini."</p>
-                    <p class="testimonial-author">- User 4, Kolektor</p>
+                    <p class="testimonial-author">- Putri Akim, Kolektor</p>
                 </div>
             </div>
         </section>
@@ -175,7 +175,7 @@
 
                 <div class="stat-card">
                     <i class="fas fa-globe-americas stat-icon"></i>
-                    <p class="stat-number"><span class="counter" data-target="968">0</span>+ Offline</p>
+                    <p class="stat-number"><span class="counter" data-target="200">0</span>+ Offline</p>
                     <p class="stat-label">Database Offline</p>
                 </div>
 
