--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <footer class="footer animate-on-scroll">
         <p class="footer-text-large">Website ini di design melalui 3 Index yaitu Node.Js CSS dan Java.Script</p>
         <p class="footer-text-small">serta di dukung oleh @SynthID dan @Workspace sebagai media database</p>
-        <p class="watermark">**Liviaaa Chantika Copyright Infragment 2025**</p>
+        <p class="watermark">Liviaaa Chantika Copyright Infragment 2025</p>
     </footer>
 
     <div id="transaction-modal" class="modal">
@@ -207,7 +207,7 @@
             </div>
 
             <div id="modal-step-1" class="modal-section">
-                <p class="modal-question">Status: **Lakukan Pembayaran**</p>
+                <p class="modal-question">Status: Lakukan Pembayaran</p>
                 <div class="qris-container">
                     <img src="https://files.catbox.moe/zyglg0.jpg" alt="QRIS Code" class="qris-image">
                 </div>
@@ -218,7 +218,7 @@
             </div>
 
             <div id="modal-step-2" class="modal-section" style="display:none;">
-                <p class="modal-question">Status: **Upload Bukti Pembayaran**</p>
+                <p class="modal-question">Status: Upload Bukti Pembayaran</p>
                 <div class="modal-form-group">
                     <label for="payment-proof-upload" class="upload-button">
                         <i class="fas fa-upload"></i> Pilih File Bukti Pembayaran
@@ -235,7 +235,7 @@
             <div id="modal-step-3" class="modal-section" style="display:none; text-align: center;">
                 <i class="fas fa-hourglass-half fa-spin fa-4x status-icon glowing-icon"></i>
                 <h4 class="modal-status-heading">Verifikasi Pembayaran Anda...</h4>
-                <p class="modal-status-text">Status: **Sedang diverifikasi oleh sistem.**</p>
+                <p class="modal-status-text">Status: Sedang diverifikasi oleh sistem.</p>
                 <p class="modal-status-text">Mohon tunggu sebentar. Proses ini mungkin memakan waktu beberapa menit.</p>
             </div>
 
@@ -255,7 +255,7 @@
                 <h4 class="modal-title">Liviaaa Call Center ID</h4>
             </div>
             <div id="call-center-modal-step-1" class="modal-section">
-                <p class="modal-question">Silakan masukkan **Subjek** atau **ID** yang Anda miliki.</p>
+                <p class="modal-question">Silakan masukkan Subjek atau ID yang Anda miliki.</p>
                 <div class="modal-form-group">
                     <label for="call-center-id-input-cc" class="form-label">Subjek Liviaaa Call Center ID:</label>
                     <input type="text" id="call-center-id-input-cc" class="form-input" placeholder="Masukkan ID atau Subjek di sini" required>
@@ -268,7 +268,7 @@
             <div id="call-center-modal-step-2" class="modal-section" style="display:none; text-align: center;">
                 <i class="fas fa-arrow-circle-up fa-spin fa-4x status-icon glowing-icon" style="color: var(--glowing-cyan);"></i>
                 <h4 class="modal-status-heading">Mempersiapkan Pesan WhatsApp...</h4>
-                <p class="modal-status-text">Status: **Sedang memuat data Call Center.**</p>
+                <p class="modal-status-text">Status: Sedang memuat data Call Center.</p>
                 <div class="progress-container">
                     <div id="simulated-progress-cc" class="simulated-progress-bar"></div>
                 </div>
@@ -277,7 +277,7 @@
             <div id="call-center-modal-step-3" class="modal-section" style="display:none; text-align: center;">
                 <i class="fas fa-check-circle fa-4x status-icon glowing-icon" style="color: var(--success-color);"></i>
                 <h4 class="modal-status-heading">Pesan Siap Dikirim!</h4>
-                <p class="modal-status-text">Silahkan klik **WA Admin** untuk mengirim Subjek/ID Anda.</p>
+                <p class="modal-status-text">Silahkan klik WA Admin untuk mengirim Subjek/ID Anda.</p>
                 <a id="wa-admin-link-cc" href="#" target="_blank" class="btn-primary btn-large" style="margin-top: 20px;">
                     <i class="fab fa-whatsapp"></i> WA Admin
                 </a>
