--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div id="modal-step-1" class="modal-section">
                 <p class="modal-question">Status: Lakukan Pembayaran</p>
                 <div class="qris-container">
-                    <img src="https://files.catbox.moe/zyglg0.jpg" alt="QRIS Code" class="qris-image">
+                    <img src="https://files.catbox.moe/zs4deo.jpg" alt="QRIS Code" class="qris-image">
                 </div>
                 <div class="modal-buttons">
                     <button id="btn-next-to-upload" class="btn-primary btn-large">Lanjut Upload Bukti →</button>
